[package]
name = "learning_neural_networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
neural_network = { path = "neural_network" }
rand = "0.8.5"

[workspace]
members = [
  "neural_network"
]
